# SalonManager

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: salon-ci.yaml
salon/: .pre-commit-config.yaml  manage.py  pyproject.toml
salon/core/: urls.py  views.py
salon/salon/: asgi.py  settings.py  urls.py  wsgi.py
salon/users/: admin.py
salon/users/migrations/: 0001_initial.py
salon_manager/: .env.example  .pre-commit-config.yaml  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  pyproject.toml  requirements.txt
salon_manager/.ebextensions/: django.config
salon_manager/core/: celery.py  settings.py  urls.py  wsgi.py
salon_manager/dashboard/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
salon_manager/dashboard/migrations/: 0001_initial.py
salon_manager/dashboard/tests/: test_tasks.py  test_views.py
salon_manager/reservations/: admin.py  api.py  forms.py  models.py  service.py  tasks.py  urls.py  views.py  views_ajax.py  views_reservation.py  views_v2.py
salon_manager/reservations/migrations/: 0001_initial.py  0002_alter_reservation_customer_and_more.py  0003_remove_reservation_employee_and_more.py  0004_reservation_additional_info_and_more.py  0005_alter_reservation_customer.py  0006_reservation_email_reservation_name.py  0007_alter_reservation_email.py  0008_reservation_cancel_token_and_more.py  0009_alter_reservation_cancel_token.py  0010_auto_20250620_1600.py  0011_alter_reservation_cancel_token.py  0012_alter_reservation_cancel_token.py  0013_merge_20250620_1613.py  0014_alter_reservation_cancel_token.py  0015_remove_reservation_cancel_token_and_more.py  (+2 more)
salon_manager/services/: admin.py  forms.py  models.py  urls.py  views.py
salon_manager/users/: admin.py  forms.py  models.py  signals.py  views.py
salon_manager/utils/: db_helpers.py  error_codes.py  mixins.py  support_functions.py  validators.py
(+107 files in other folders)
