[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E741", "F401"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.djlint]
ignore = "H006,H021"


[tool.mypy]
mypy_path = "."
python_version = "3.13"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

exclude = [
    "tests/",
    "migrations/"
]

[project]
name = "salon"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "celery (>=5.5.3,<6.0.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)",
    "django (>=5.2.7,<6.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "django-crispy-forms (>=2.4,<3.0)",
    "django-debug-toolbar (>=6.0.0,<7.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-formtools (>=2.5.1,<3.0.0)",
    "django-phonenumber-field (>=8.3.0,<9.0.0)",
    "django-silk (>=5.4.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "phonenumbers (>=9.0.16,<10.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "bandit (>=1.8.6,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.1,<0.15.0)",
    "safety (>=3.6.2,<4.0.0)"
]

[tool.poetry]
package-mode = false
